--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Raleway", sans-serif;
+  background: linear-gradient(to left, #fffbf4, #e2e2e2);
 }
 
 /* Hero Section */
@@ -18,6 +19,18 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+.card {
+  background: linear-gradient(to left, #fffbf4, #e2e2e2);
+  box-shadow: 0 0 10px #373a3c;
+  border-radius: 3%;
+  border: 2px solid #373a3c;
+}
+
+.card .image-top {
+  border-radius: 4%;
+  border: 1px solid #373a3c;
 }
 
 /* Contacto */
